# minicom

./: CMakeLists.txt  FAT32.c  SD_routines.h  Settings_map.txt  console.old  fonts.h  lcd_driver.c  lcd_driver.h  ll_x128a3u.c  ll_x128a3u.h  main.c  ningen_ui.c  ningen_ui.h  ningen_ui_(x).c  nvm_driver.h  pgm_test.sh  pinout.txt  poronga.elf  poronga.ld  programs.c  pruebas_claude.c  salida.hex  x128_ili9488_driver.h  x128_ili9488_driver_(x).c
include/: FAT32.h  SD_routines.h  Untitled  awire_driver.h  colors.h  console.h  jtag_driver.h  kb_driver.h  lcd_driver.h  mcu_driver.h  ningen_ui.h  programs.h  ram_driver.h  script.h  strings.h
not_used_yet/: FAT32.h  SD_routines.c  awire_driver.h  console_claude.c  fat_try.c  ningen_ui_(x).h  pgm.sh  pgm_old.sh  programs.c  programs.h  ssd1306_driver.c  x128_ili9488_driver.c  x128_ili9488_driver_(x).h
src/: FAT32.c  SD_routines.c  awire_driver.c  console.c  fonts.c  jtag_driver.c  kb_driver.c  lcd_driver.c  main.c  mcu_dirver.c  ningen_ui.c  nvm_driver.c  programs.c  ram_driver.c  script.c  strings.c
